mise en place de la page

--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
                 </tr>
             </thead>
             <tbody> 
-                <tr>
-                    <th scope="col">52</th>
-                    <th scope="col">TOGOU</th>
-                    <th scope="col">Saidath</th>
-                    <th scope="col">saidath081@gmail</th>
+                 <tr>
+                    <td>1</td>
+                    <td>AGBODJOGBE</td>
+                    <td>Christia</td>
+                    <td>yemiagbodjogbe@gmail.com</td>
                 </tr>           
+                 <tr>
+                    <td>2</td>
+                    <td>NAÏMI</td>
+                    <td>Amîr</td>
+                    <td>naimiamir661@gmail.com</td>
+                </tr>  
+                <tr>
+                    <td>3</td>
+                    <td>TOGOU</td>
+                    <td>Saidath</td>
+                    <td>saidath081@gmail.com</td>
+                </tr>  
+
             </tbody>
         </table>
     </div>
