ajout de HOUNGBADJI Bénédicte

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                     <td>NAÏMI</td>
                     <td>Amîr</td>
                     <td>naimiamir661@gmail.com</td>
+                </tr> 
+                <tr>
+                    <td>2</td>
+                    <td>HOUNGBADJI</td>
+                    <td>Bénédicte</td>
+                    <td>benedicteq5@gmail.com</td>
                 </tr>  
             </tbody>
         </table>
