Ajout de Mafoya OHIN dans le tableau

--- a/index.html
+++ b/index.html
@@ -113,36 +113,42 @@
                 </tr> 
                 <tr>
                     <td>16</td>
+                    <td>OHIN</td>
+                    <td>Mafoya Paul-Richard</td>
+                    <td>emericohin@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>17</td>
                     <td>SOULE</td>
                     <td>Firhyaal</td>
                     <td>firhyaals@gmail.com</td>
                 </tr>
                 <tr>
-                    <td>17</td>
+                    <td>18</td>
                     <td>TOFFA</td>
                     <td>Merveille</td>
                     <td>valencetoffa@gmail.com</td>
                 </tr>
                 <tr>
-                    <td>18</td>
+                    <td>19</td>
                     <td>TOGOU</td>
                     <td>Saidath</td>
                     <td>saidath081@gmail.com</td>
                 </tr>     
                 <tr>
-                    <td>19</td>
+                    <td>20</td>
                     <td>TOUDONOU</td>
                     <td>Hans</td>
                     <td>tdnhsbest50@gmail.com</td>
                  </tr>
                  <tr>
-                    <td>20</td>
+                    <td>21</td>
                     <td>ZANNOU</td>
                     <td>Caleb</td>
                     <td>calebzanboss16@gmail.com</td>   
                 </tr> 
                 <tr>
-                     <td>21</td>
+                     <td>22</td>
                      <td>ZIBO</td>
                      <td>Falonne</td>
                      <td>zibofalonne@gmail.com</td>
